Fixed break on small screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -617,12 +617,23 @@ label {
 
   .modal-dialog {
     width: 582px;
+    position: relative;
   }
 
   .modal.in .modal-dialog {
     -webkit-transform: translate(0, 50%);
     -ms-transform: translate(0, 50%);
     transform: translate(0, 50%);
+  }
+
+  .close-video-modal {
+    position: absolute;
+    top: -3px;
+    right: -1px;
+    z-index: 5;
+    color: white;
+    font-size: 26px;
+    cursor: pointer;
   }
 
   /* ===============KendoUI Common Styles=============== */
